# 05_statistics

./: .gitignore  CMakeLists.txt  IStatistics.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Pct.cpp  Pct.h  README.md  Sigma.cpp  Sigma.h  main.cpp  statistics.cpp
